# 2021_09_01_VarChAMP

./: .gitignore  .gitmodules  .toc  LICENSE  README.md  environment.yml  negcon_poscon_selection.ipynb  standardize_platemaps.ipynb
0.replicability/: 0.relicability-bio.ipynb  0.relicability.ipynb  2.relicability-bio-tech-comparison.ipynb
1.prep_metadata/: standardize_platemaps.ipynb
4.replicability/: 1.relicability-bio-tech.ipynb
5.pilot_analysis/: screen_analysis_basic.ipynb
6.downstream_analysis/: 0.0.1_Cytotable_testing.ipynb  0.0.2_Feature_Selection.ipynb  0.load_parquet_files.ipynb  1.phenotype_analysis-jump.ipynb  1.phenotype_analysis.ipynb  1.phenotype_analysis_final.ipynb  2.feature_analysis.ipynb  annotate_normalize.py  convert_to_parquet.py  feature_select.py  profile_classification_stratification.py  scatterplot.ipynb
6.downstream_analysis_snakemake/: Snakefile  download_data.sh  download_data_well.sh
7.figures_generation/: 1.identify_hits_from_null.ipynb  2.compare_technical_replicates.ipynb  3.gene_exploration.ipynb  utils.py  (+3 more)
9.downstream_analysis_snakmake/: Snakefile  download_data.sh  pyproject.toml  utils.py
9.downstream_analysis_snakmake/classification/: __init__.py  classify.py
9.downstream_analysis_snakmake/inputs/configs/: batch4.json  batch7.json  batch8.json
9.downstream_analysis_snakmake/load/: __init__.py  to_parquet.py
9.downstream_analysis_snakmake/preprocess/: __init__.py  annotate.py  clean.py  correct.py  feature_select.py  normalize.py  to_parquet.py
9.downstream_analysis_snakmake/rules/: common.smk  preprocess.smk
(+319 files in other folders)
