[tool.poetry]
name = "downstream_analysis"
version = "0.1.0"
description = "'Preprocessing pipelien for VarChAMP data.'"
authors = ["Zitong-Chen-16 <zitong@broadinstitute.org>"]
readme = "README.md"
packages = [{include = "6"}]

[tool.poetry.dependencies]
python = "^3.10"
tqdm = "^4.66.2"
scikit-learn = "*"
snakemake = "^7.32.4"
matplotlib = "^3.8.3"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
